--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700');
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+p {
+  font-weight: 200;
+}
 
 li {
   list-style-type: none;
@@ -11,3 +20,16 @@ li {
 a {
   text-decoration: none;
 }
+
+.flex-box {
+  display: flex;
+  // justify-content: space-around;
+  flex-direction: column;
+}
+
+.card {
+  display: inline-block;
+  // border: 1px solid rgba(0,0,0,0.3);
+  padding: 10px;
+}
+
