--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
 
     <br>
 
-    <%= link_to "Home", root_path %>
+    <%= link_to "Home", root_path %> | <%= link_to "New Task", new_task_path %>
   </body>
 </html>
