--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Todo</h1>
-
-<ul class="flex-box">
+<!-- <ul class="flex-box">
   <% @tasks.each do |task| %>
     <li>
     <div class="card">
@@ -14,4 +12,28 @@
       </li>
     </div>
   <% end %>
-</ul>
+</ul> -->
+
+
+
+<div class='list animated tada'>
+  <h1>
+    Todo
+    <a class='add' href='<%= new_task_path %>'>
+      <div class='fa fa-plus'></div>
+    </a>
+  </h1>
+  <ul>
+    <% @tasks.each do |task| %>
+      <li>
+        <a href='<%= task_path(task) %>' data-confirm="Are you sure?" data-method="delete">
+          <div class='fa fa-check'>
+          </div>
+        </a>
+        <!-- <strong><%= link_to task.name, task_path(task) %></strong> -->
+        <strong><%= task.name %></strong>
+        <%= task.description %>
+      </li>
+    <% end %>
+  </ul>
+</div>
